
	Collective fixes from branch al_ipmi_2_0_branch.  See ChangeLog in
	branch for detailed day by day changes.

	LIBFREEIPMI

	* libfreeipmi/src/ipmi-rmcpplus.h,
	libfreeipmi/src/ipmi-rmcpplus.c,
	libfreeipmi/src/ipmi-rmcpplus-debug.h,
	libfreeipmi/src/ipmi-rmcpplus-debug.c,
	libfreeipmi/src/ipmi-rmcpplus-interface.h,
	libfreeipmi/src/ipmi-rmcpplus-interface.c,
	libfreeipmi/src/ipmi-rmcpplus-util.h,
	libfreeipmi/src/ipmi-rmcpplus-util.c: New files.

	* libfreeipmi/src/ipmi-error.h: Added RMCP+ Status Codes.

	* libfreeipmi/src/ipmi-error.h, libfreeipmi/src/ipmi-error.c
	(rmcpplus_status_strerror_r): New function.

	* libfreeipmi/src/ipmi-interface.h: Added
	IPMI_SESSION_AUTH_TYPE_RMCPPLUS, IPMI_1_5_SESSION_AUTH_TYPE_VALID,
	and IPMI_1_5_PRIV_LEVEL_VALID macros.  Adjusted
	IPMI_SESSION_AUTH_TYPE_VALID and IPMI_PRIV_LEVEL_VALID for ipmi
	2.0 appropriately.
	
	* libfreeipmi/src/ipmi-sessions.c (fill_hdr_session),
	libfreeipmi/src/ipmi-msg-support-cmds.c (ipmi-msg-support-cmds.c),
	libfreeipmi/src/ipmi-lan-interface.c (assemble_ipmi_lan_pkt,
	ipmi_open_outofband): Use new IPMI_1_5_SESSION_AUTH_TYPE_VALID
	macro.

	* libfreeipmi/src/ipmi-msg-support-cmds.c
	(fill_cmd_get_channel_auth_caps, fill_cmd_activate_session,
	fill_cmd_set_session_priv_level), libfreeipmi/src/ipmi-interface.c
	(ipmi_open_outofband): Use new IPMI_1_5_PRIV_LEVEL_VALID.
	
	* libfreeipmi/src/ipmi-hmac.c, libfreeipmi/src/ipmi-hmac.h,
	libfreeipmi/src/ipmi-sha1.c, libfreeipmi/src/ipmi-sha1.h: Removed
	files.

	* libfreeipmi/src/freeipmi.h: Added ipmi-rmcpplus.h,
	ipmi-rmcpplus-interface.h, ipmi-rmcpplus-util.h.  Removed
	ipmi-hmac.c, ipmi-hmac.h, ipmi-sha1.c, ipmi-sha1.h.

	* libfreeipmi/src/ipmi-utils.c (ipmi_get_random_seed): Utilize
	#define checks for /dev/urandom and /dev/random.

	* libfreeipmi/src/ipmi-utils.h, libfreeipmi/src/ipmi-utils.c
	(ipmi_get_random): New function.

	RMCPPING and IPMIPING
	
	* libfreeipmi/src/ipmi-msg-support-cmds.h,
	libfreeipmi/src/ipmi-msg-support-cmds.c