@@ -267,45 +267,43 @@ mcpplus_status_strerror_r(uint8_t rmcpplus_status_code,
   switch (rmcpplus_status_code) 
     {
     case RMCPPLUS_STATUS_NO_ERRORS:
-      SNPRINTF_RETURN ("No errors.");
+      SNPRINTF_RETURN (RMCPPLUS_STATUS_NO_ERRORS_STR);
     case RMCPPLUS_STATUS_INSUFFICIENT_RESOURCES_TO_CREATE_A_SESSION:
-      SNPRINTF_RETURN ("Insufficient resources to create a session.");
+      SNPRINTF_RETURN (RMCPPLUS_STATUS_INSUFFICIENT_RESOURCES_TO_CREATE_A_SESSION_STR);
     case RMCPPLUS_STATUS_INVALID_SESSION_ID:
-      SNPRINTF_RETURN ("Invalid Session ID.");
+      SNPRINTF_RETURN (RMCPPLUS_STATUS_INVALID_SESSION_ID_STR);
     case RMCPPLUS_STATUS_INVALID_PAYLOAD_TYPE:
-      SNPRINTF_RETURN ("Invalid payload type.");
+      SNPRINTF_RETURN (RMCPPLUS_STATUS_INVALID_PAYLOAD_TYPE_STR);
     case RMCPPLUS_STATUS_INVALID_AUTHENTICATION_ALGORITHM:
-      SNPRINTF_RETURN ("Invalid authentication algorithm.");
+      SNPRINTF_RETURN (RMCPPLUS_STATUS_INVALID_AUTHENTICATION_ALGORITHM_STR);
     case RMCPPLUS_STATUS_INVALID_INTEGRITY_ALGORITHM:
-      SNPRINTF_RETURN ("Invalid integrity algorithm.");
+      SNPRINTF_RETURN (RMCPPLUS_STATUS_INVALID_INTEGRITY_ALGORITHM_STR);
     case RMCPPLUS_STATUS_NO_MATCHING_AUTHENTICATION_PAYLOAD:
-      SNPRINTF_RETURN ("No matching authentication payload.");
+      SNPRINTF_RETURN (RMCPPLUS_STATUS_NO_MATCHING_AUTHENTICATION_PAYLOAD_STR);
     case RMCPPLUS_STATUS_NO_MATCHING_INTEGRITY_PAYLOAD:
-      SNPRINTF_RETURN ("No mathing integrity payload.");
+      SNPRINTF_RETURN (RMCPPLUS_STATUS_NO_MATCHING_INTEGRITY_PAYLOAD_STR);
     case RMCPPLUS_STATUS_INACTIVE_SESSION_ID:
-      SNPRINTF_RETURN ("Inactive Session ID");
+      SNPRINTF_RETURN (RMCPPLUS_STATUS_INACTIVE_SESSION_ID_STR);
     case RMCPPLUS_STATUS_INVALID_ROLE:
-      SNPRINTF_RETURN ("Invalid role.");
+      SNPRINTF_RETURN (RMCPPLUS_STATUS_INVALID_ROLE_STR);
     case RMCPPLUS_STATUS_UNAUTHORIZED_ROLE_OR_PRIVILEGE_LEVEL_REQUESTED:
-      SNPRINTF_RETURN ("Unauthorized role or privelege level requested.");
+      SNPRINTF_RETURN (RMCPPLUS_STATUS_UNAUTHORIZED_ROLE_OR_PRIVILEGE_LEVEL_REQUESTED_STR);
     case RMCPPLUS_STATUS_INSUFFICIENT_RESOURCES_TO_CREATE_A_SESSION_AT_THE_REQUESTED_TIME:
-      SNPRINTF_RETURN ("Insufficient resources to create a session "
-                       "at the requested time.");
+      SNPRINTF_RETURN (RMCPPLUS_STATUS_INSUFFICIENT_RESOURCES_TO_CREATE_A_SESSION_AT_THE_REQUESTED_TIME_STR);
     case RMCPPLUS_STATUS_INVALID_NAME_LENGTH:
-      SNPRINTF_RETURN ("Invalid name length.");
+      SNPRINTF_RETURN (RMCPPLUS_STATUS_INVALID_NAME_LENGTH_STR);
     case RMCPPLUS_STATUS_UNAUTHORIZED_NAME:
-      SNPRINTF_RETURN ("Unauthorized name.");
+      SNPRINTF_RETURN (RMCPPLUS_STATUS_UNAUTHORIZED_NAME_STR);
     case RMCPPLUS_STATUS_UNAUTHORIZED_GUID:
-      SNPRINTF_RETURN ("Unauthorized GUID. (GUID that BMC submitted in "
-                       "RAKP Message 2 was not accepted by remote console).");
+      SNPRINTF_RETURN (RMCPPLUS_STATUS_UNAUTHORIZED_GUID_STR);
     case RMCPPLUS_STATUS_INVALID_INTEGRITY_CHECK_VALUE:
-      SNPRINTF_RETURN ("Invalid integrity check value.");
+      SNPRINTF_RETURN (RMCPPLUS_STATUS_INVALID_INTEGRITY_CHECK_VALUE_STR);
     case RMCPPLUS_STATUS_INVALID_CONFIDENTIALITY_ALGORITHM:
-      SNPRINTF_RETURN ("Invalid confidentiality algorithm.");
+      SNPRINTF_RETURN (RMCPPLUS_STATUS_INVALID_CONFIDENTIALITY_ALGORITHM_STR);
     case RMCPPLUS_STATUS_NO_CIPHER_SUITE_MATCH_WITH_PROPOSED_SECURITY_ALGORITHMS:
-      SNPRINTF_RETURN ("No Cipher Suite match with proposed security algorithms.");
+      SNPRINTF_RETURN (RMCPPLUS_STATUS_NO_CIPHER_SUITE_MATCH_WITH_PROPOSED_SECURITY_ALGORITHMS_STR);
     case RMCPPLUS_STATUS_ILLEGAL_OR_UNRECOGNIZED_PARAMETER:
-      SNPRINTF_RETURN ("Illegal or Unrecognized parameter.");
+      SNPRINTF_RETURN (RMCPPLUS_STATUS_ILLEGAL_OR_UNRECOGNIZED_PARAMETER_STR);
     }
 
   SNPRINTF_RETURN ("Unknown rmcp+ or rakp status code %02Xh.", 
